# pitch-iq

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: adversarial-reviewer.md  data-tool-researcher.md  fastapi-builder.md  langgraph-builder.md  nextjs-builder.md  test-writer.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 16694b4ff75e_initial_schema.py
backend/app/: config.py  deps.py  errors.py  lifespan.py  main.py  security.py
backend/app/api/: auth.py  brackets.py  briefings.py  chat.py  health.py  leagues.py  tournaments.py
backend/app/db/: base.py  models.py  session.py
backend/app/graph/: build.py  llm.py  router.py  state.py
backend/app/graph/nodes/: chitchat.py  ingest.py  persist_memory.py
backend/app/graph/subgraphs/: bracket_ops.py  briefing.py  prediction.py  qa_agent.py
backend/app/graph/tools/: __init__.py  bracket.py  rules.py  sports.py
backend/app/memory/: store.py
backend/app/providers/: __init__.py  api_football.py  base.py  caching.py  fake.py  football_data.py  the_odds_api.py
backend/app/scheduler/: jobs.py  scheduler.py
backend/app/schemas/: auth.py  bracket.py  briefing.py  chat.py  common.py  league.py  tournament.py
backend/app/services/: briefing_service.py  companion.py  poller.py  scoring_service.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_graph.py
backend/tests/unit/: test_providers_scoring.py
frontend/: next.config.ts  package.json  pnpm-lock.yaml
(+72 files in other folders)
