[project]
name = "pitch-iq-backend"
version = "0.1.0"
description = "Pitch IQ — config-driven agentic tournament-companion backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "apscheduler>=3.10,<4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary,pool]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "pwdlib[argon2]>=0.2",
    "authlib>=1.3",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "langsmith>=0.1",
    "python-dotenv>=1.0",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["langsmith: evals gated by LangSmith"]
testpaths = ["tests"]
